--- a/root/blog_app/static/css/main.css
+++ b/root/blog_app/static/css/main.css
@@ -90,3 +90,8 @@ input[type=submit] {
     font-size:12px;
     color:#666;
 }
+/** Cecherz styles **/
+#return-button {
+    color: red;
+    font-size: 60px;
+}
