--- a/root/blog_app/templates/articles_list.html
+++ b/root/blog_app/templates/articles_list.html
@@ -15,4 +15,5 @@
         </p>
         {{ article|truncatewords:30|linebreaks }}
     {% endfor %}
+{% include "pagination.html" with page=articles %}
 {% endblock %}
