--- a/root/blog_app/templates/base.html
+++ b/root/blog_app/templates/base.html
@@ -4,20 +4,36 @@
         <title>{% block title %} {% endblock %}</title>
         {% load static %}
         <link href="{% static 'css/main.css' %}" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+              rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+              crossorigin="anonymous">
     </head>
     <body>
-        <nav>
-            <ul>
-                <li><a href="{% url 'admin:index' %}">Admin panel</a></li>
-            </ul>
+        <nav class="navbar navbar-light navbar-expand-lg" style="background-color: #e3f2fd;">
+            <div class="container-fluid">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'admin:index' %}">Admin panel</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'blog:about' %}">About</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
-        <div id="content">
-            {% block content %}
-            {% endblock %}
-        </div>
-        <div id="sidebar">
-            <h2>Meta data:</h2>
-            <p>Check on blog</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-lg-8 p-3 mb-2 bg-light text-dark">
+                    {% block content %}
+                    {% endblock %}
+                </div>
+                <div class="col-md-4 col-lg-4 p-3 mb-2 bg-secondary text-white">
+                    <div class="p-3 mb-2 bg-white text-dark text-center">
+                        <h2 class="display-6">Meta data:</h2>
+                        <p>Check on blog</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
