--- a/root/blog_app/templates/pagination.html
+++ b/root/blog_app/templates/pagination.html
@@ -1,14 +1,13 @@
 <div class="pagination">
   <span class="step-links">
     {% if page.has_previous %}
-      <a href="?page={{ page.previous_page_number }}">Previous ☚</a>
+      <a class="p-3 mb-2 bg-white text-dark" href="?page={{ page.previous_page_number }}">Previous ☚</a>
     {% endif %}
-    <span class="">
+    <span class="p-3 mb-2 bg-white text-dark">
       Page {{ page.number }} from {{ page.paginator.num_pages }}.
     </span>
     {% if page.has_next %}
-      <a href="?page={{ page.next_page_number }}">Next ☛</a>
+      <a class="p-3 mb-2 bg-white text-dark" href="?page={{ page.next_page_number }}">Next ☛</a>
     {% endif %}
-
   </span>
 </div>
